[gd_scene load_steps=26 format=2]

[ext_resource path="res://necromancer/negromante_spritesheet_v2.png" type="Texture" id=1]
[ext_resource path="res://necromancer/Necromancer.gd" type="Script" id=2]
[ext_resource path="res://42/light.png" type="Texture" id=3]
[ext_resource path="res://necromancer/Laugh_Evil_02.wav" type="AudioStream" id=4]
[ext_resource path="res://necromancer/Laugh_Evil_01.wav" type="AudioStream" id=5]
[ext_resource path="res://necromancer/Laugh_Evil_00.wav" type="AudioStream" id=6]
[ext_resource path="res://necromancer/mnstr1.wav" type="AudioStream" id=7]
[ext_resource path="res://necromancer/Monster_03.wav" type="AudioStream" id=8]
[ext_resource path="res://necromancer/spell.wav" type="AudioStream" id=9]
[ext_resource path="res://necromancer/magicfail.wav" type="AudioStream" id=10]
[ext_resource path="res://crow/explodemini.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "attack_left"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 6 ), Vector2( 1, 6 ), Vector2( 2, 6 ), Vector2( 3, 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.79 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "attack_right"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../HurtBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.79 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "cross_left"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 9 ), Vector2( 1, 9 ), Vector2( 2, 9 ), Vector2( 3, 9 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_cross"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "cross_right"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 4 ), Vector2( 1, 4 ), Vector2( 2, 4 ), Vector2( 3, 4 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot_cross"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 10 ), Vector2( 1, 10 ), Vector2( 2, 10 ), Vector2( 3, 10 ), Vector2( 4, 10 ), Vector2( 5, 10 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../Explode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 7 ), Vector2( 1, 7 ), Vector2( 2, 7 ), Vector2( 3, 7 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_skeleton"
} ]
}

[sub_resource type="Animation" id=7]
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_skeleton"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 5 ), Vector2( 1, 5 ), Vector2( 2, 5 ), Vector2( 3, 5 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 8 ), Vector2( 1, 8 ), Vector2( 2, 8 ), Vector2( 3, 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "summon_pentagram"
} ]
}

[sub_resource type="Animation" id=11]
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "summon_pentagram"
} ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5.45395, 7.33952 )

[sub_resource type="CapsuleShape2D" id=13]
radius = 11.8036
height = 33.9317

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 10.2162, 25.5947 )

[node name="Necromancer" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 11
hframes = 8
frame = 85

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/attack_left = SubResource( 1 )
anims/attack_right = SubResource( 2 )
anims/cross_left = SubResource( 3 )
anims/cross_right = SubResource( 4 )
anims/die = SubResource( 5 )
anims/evoke_left = SubResource( 6 )
anims/evoke_right = SubResource( 7 )
anims/idle_left = SubResource( 8 )
anims/idle_right = SubResource( 9 )
anims/pentagram_left = SubResource( 10 )
anims/pentagram_right = SubResource( 11 )

[node name="WallCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.74645 )
shape = SubResource( 12 )

[node name="HitBox" type="Area2D" parent="." groups=[
"hitbox",
]]
priority = 1.0
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 13 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 22.2236, 0 )
shape = SubResource( 14 )

[node name="MoveLight" type="Light2D" parent="."]
visible = false
texture = ExtResource( 3 )
color = Color( 1, 0.901961, 0.0862745, 1 )

[node name="EvokeTimeout" type="Timer" parent="."]

[node name="MoveTimeout" type="Timer" parent="."]

[node name="Laugh1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Laugh2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Laugh3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="Teleport" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Fail" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="PentagramTimer" type="Timer" parent="."]
one_shot = true

[node name="CrowTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="Explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_shape_entered" from="HurtBox" to="." method="_on_HurtBox_area_shape_entered"]
[connection signal="timeout" from="EvokeTimeout" to="." method="_on_EvokeTimeout_timeout"]
[connection signal="timeout" from="MoveTimeout" to="." method="_on_MoveTimeout_timeout"]
[connection signal="timeout" from="PentagramTimer" to="." method="_on_PentagramTimer_timeout"]
[connection signal="timeout" from="CrowTimer" to="." method="_on_CrowTimer_timeout"]
